--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^4.0.0",
-        "axios": "^1.1.2",
+        "axios": "^1.3.5",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
@@ -15,5 +15,11 @@
         "sass": "^1.56.1",
         "vite": "^4.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "alertifyjs": "^1.13.1",
+        "express": "^4.18.2",
+        "mongodb": "^5.5.0",
+        "socket.io": "^4.6.1"
     }
 }
