--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "alertifyjs": "^1.13.1",
+        "bootstrap-icons": "^1.10.5",
         "express": "^4.18.2",
         "mongodb": "^5.5.0",
         "socket.io": "^4.6.1"
