--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "dependencies": {
         "alertifyjs": "^1.13.1",
         "bootstrap-icons": "^1.10.5",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
+        "laravel-echo": "^1.15.1",
         "mongodb": "^5.5.0",
-        "socket.io": "^4.6.1"
+        "mongoose": "^7.2.2",
+        "socket.io": "^4.6.1",
+        "socket.io-client": "^4.6.2",
+        "sqlite3": "^5.1.6"
     }
 }
