--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "rennokki/laravel-eloquent-query-cache": "^3.4",
-        "srmklive/paypal": "^3.0"
+        "srmklive/paypal": "^3.0",
+        "wisembly/elephant.io": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
