--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "bootstrap-icons": "^1.10.5",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0",
         "laravel-echo": "^1.15.1",
         "mongodb": "^5.5.0",
         "mongoose": "^7.2.2",
