--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "@joeattardi/emoji-button": "^4.6.4",
         "alertifyjs": "^1.13.1",
         "bootstrap-icons": "^1.10.5",
         "cors": "^2.8.5",
@@ -25,8 +26,10 @@
         "laravel-echo": "^1.15.1",
         "mongodb": "^5.5.0",
         "mongoose": "^7.2.2",
+        "multer": "^1.4.5-lts.1",
         "socket.io": "^4.6.1",
         "socket.io-client": "^4.6.2",
-        "sqlite3": "^5.1.6"
+        "sqlite3": "^5.1.6",
+        "vue3-emoji-picker": "^1.1.7"
     }
 }
