--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "socket.io-client": "^4.6.2",
         "sqlite3": "^5.1.6",
         "uuid": "^9.0.0",
+        "v-pagination-3": "^0.1.7",
         "vue3-emoji-picker": "^1.1.7"
     }
 }
