--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /node_modules
 /public/build
 /public/hot
+node_modules
 /public/storage
 .phpunit.result.cache
 Homestead.json
@@ -11,3 +12,51 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+# Laravel specific
+/bootstrap/cache/
+/vendor/
+/node_modules/
+/public/hot
+/public/storage
+/storage/*.key
+/.env
+/.env.backup
+/.env.example
+/storage/framework/
+/public/build
+/public/mix-manifest.json
+
+# Various IDE and editors
+/.idea/
+/.vscode/
+/_ide_helper.php
+/_ide_helper_models.php
+/.phpstorm.meta.php
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+
+# Linux
+*.swp
+*.bak
+*.off
+*.old
+
+# PHP
+*.log
+*.sqlite
+
+# PHPUnit
+/phpunit-*.xml
+/.phpunit.result.cache
+
+# Node
+npm-debug.log
+yarn-error.log
