--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
         "@joeattardi/emoji-button": "^4.6.4",
         "alertifyjs": "^1.13.1",
         "bootstrap-icons": "^1.10.5",
+        "chart.js": "^4.4.0",
+        "chartjs-adapter-moment": "^1.0.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
         "laravel-echo": "^1.15.1",
+        "moment": "^2.29.4",
         "mongodb": "^5.5.0",
         "mongoose": "^7.2.2",
         "multer": "^1.4.5-lts.1",
@@ -32,6 +35,7 @@
         "sqlite3": "^5.1.6",
         "uuid": "^9.0.0",
         "v-pagination-3": "^0.1.7",
+        "vue-chartjs": "^5.2.0",
         "vue3-emoji-picker": "^1.1.7"
     }
 }
